# log-anonymiser-2

./: CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: release-plz.yml  release.yml
src/: anonymiser.rs  config.rs  dns.rs  io.rs  lib.rs  main.rs  processor.rs
tests/: anonymisator_ipv4_test.rs  anonymisator_ipv6_test.rs  dns_lookup_handler_cache_test.rs  full_stack_tests.rs  ip_address_anonymiser_test.rs  spatineo_log_analysis_ip_address_anonymiser_test.rs
