[package]
name = "log-anonymiser"
version = "2.0.0-rc2"
edition = "2021"
description = "Command line tool for anonymising access log files"
license = "GPL-3.0"
authors = ["Spatineo Inc"]
repository = "https://github.com/spatineo/log-anonymiser"

[lib]
name = "log_anonymiser"
path = "src/lib.rs"

[[bin]]
name = "log-anonymiser"
path = "src/main.rs"

[dependencies]
fancy-regex = "0.13"
regex = "1"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
hickory-resolver = { version = "0.25.2", features = ["system-config"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
addr = "0.15"
lru = "0.12"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rayon = "1"
once_cell = "1"

[dev-dependencies]
ipnet = "2"
